Bug 463908 - Selecting of equalizer preset settings not always changes sliders' positions
Summary: Selecting of equalizer preset settings not always changes sliders' positions
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Tools/Equalizer (other bugs)
Version First Reported In: 2.9.71
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-06 03:11 UTC by PMR
Modified: 2025-07-10 16:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description PMR 2023-01-06 03:11:38 UTC
SUMMARY
Selecting of equalizer preset settings not always changes sliders' positions.

STEPS TO REPRODUCE
1. Open equalizer window
2. Make sure "Active" is checked. 
3. Select one of presets
4. Select the other one of presets
5. Select the other one of presets
6. Repeat 3-6 several times.

OBSERVED RESULT
Sliders not always follow the selected preset settings.

EXPECTED RESULT
Sliders should always follow the selected preset settings.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Mageia 8

Informacje ogólne:
Wersja Amarok: 2.9.71
Wersja Szkieletów KDE: 5.76.0
Wersja Qt: 5.15.2
Wersja Phonon: 4.11.1
Silnik Phonon: Phonon GStreamer (4.10.0, http://gstreamer.freedesktop.org)
PulseAudio: Tak

Włączone skrypty:

Włączone wtyczki:
   Zbiór MTP (1.0)
   Zbiór na urządzeniu danych (1.0)
   Zbiór iPod, iPad i iPhone (2.0)
   Zbiór audioCD (1.0)
   Zbiór MySQL (1.0)
   Last.fm (1.0)
   Katalog podcastów (1.0)
   Sklep Magnatune (2.0)
   Importowanie z Banshee (1.0)
   Importowanie z Clementine (1.0)
   Importowanie z Amaroka 2.x (1.0)
   Importowanie z Rhythmboksa (1.0)
   Importowanie z Amaroka 1.4 (FastForward) (1.0)
   Importowanie z iTunes (1.0)

Włączone aplety:
   Wikipedia
   Analizator


ADDITIONAL INFORMATION
Comment 1 Tuomas Nurmi 2025-07-10 16:07:01 UTC
Git commit db2876ae8124cf8bf0fe7bd53dcdcf5c2f004987 by Tuomas Nurmi.
Committed on 10/07/2025 at 16:06.
Pushed by nurmi into branch 'master'.

Fix equalizer slider updates with translated preset names

When changing equalizer preset, the sliders didn't update if the name of
the preset differed from the original English name.

M  +1    -0    ChangeLog
M  +1    -1    src/dialogs/EqualizerDialog.cpp
M  +1    -1    src/playback/EqualizerController.cpp

https://invent.kde.org/multimedia/amarok/-/commit/db2876ae8124cf8bf0fe7bd53dcdcf5c2f004987