Fix equalizer slider updates with translated preset names

When changing equalizer preset, the sliders didn't update if the name of
the preset differed from the original English name.

BUG: 463908